--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,13 @@
 @import "tailwindcss";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --googleBlue: #4285F4;
+  --googleRed: #EA4335;
+  --googleYellow: #FBBC05;
+  --googleGreen: #34A853;
+  --googleGray: #5F6368;
 }
 
 @theme inline {
@@ -25,5 +27,45 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, Montserrat, Raleway;
+}
+
+.text-googleBlue {
+  color: var(--googleBlue);
+}
+
+.text-googleRed {
+  color: var(--googleRed);
+}
+
+.text-googleYellow {
+  color: var(--googleYellow);
+}
+
+.text-googleGreen {
+  color: var(--googleGreen);
+}
+
+.text-googleGray {
+  color: var(--googleGray);
+}
+
+.bg-googleBlue {
+  background-color: var(--googleBlue);
+}
+
+.bg-googleRed {
+  background-color: var(--googleRed);
+}
+
+.bg-googleYellow {
+  background-color: var(--googleYellow);
+}
+
+.bg-googleGreen {
+  background-color: var(--googleGreen);
+}
+
+.bg-googleGray {
+  background-color: var(--googleGray);
 }
