--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #520606;
   --foreground: #171717;
   --googleBlue: #4285F4;
   --googleRed: #EA4335;
